--- a/area.html
+++ b/area.html
@@ -10,13 +10,21 @@
 </head>
 
 <body>
+
+    <nav class="container-nav">
+        <a href="/istriangle.html" class="nav-link ">isTriangle</a>
+        <a href="/hypotenuse .html" class="nav-link">Hypotenuse</a>
+        <a href="/area.html" class="nav-link link-active">Area</a>
+        <a href="/quiz.html" class="nav-link">Quiz</a>
+    </nav>
+
     <div class="container">
         <h1 class="heading">Calculate Area</h1>
         <label>Base:</label>
-        <input type="number" class="input-field" id="base"></input>
+        <input type="number" class="input-angle" id="base"></input>
         <label>Height:</label>
-        <input type="number" class="input-field" id="height"></input>
-        <button id="area-btn">Calculate Area</button>
+        <input type="number" class="input-angle" id="height"></input>
+        <button id="area-btn" class="button">Calculate Area</button>
         <div id="output"></div>
     </div>
 
