--- a/hypotenuse .html
+++ b/hypotenuse .html
@@ -10,13 +10,24 @@
 </head>
 
 <body>
-    <h1>Calculate Hypotenuse</h1>
-    <label>Adjacent side</label>
-    <input type="number" class="input-side"></input>
-    <label>Opposite side</label>
-    <input type="number" class="input-side"></input>
-    <button id="hypotenuse-btn">Calculate Hypotenuse</button>
-    <div id="output"></div>
+    <nav class="container-nav">
+        <a href="/istriangle.html" class="nav-link ">isTriangle</a>
+        <a href="/hypotenuse .html" class="nav-link link-active">Hypotenuse</a>
+        <a href="/area.html" class="nav-link">Area</a>
+        <a href="/quiz.html" class="nav-link">Quiz</a>
+    </nav>
+
+
+    <div class="container">
+        <h1 class="heading">Calculate Hypotenuse</h1>
+        <label>Adjacent side :</label>
+        <input type="number" class="input-side"></input>
+        <label>Opposite side :</label>
+        <input type="number" class="input-side"></input>
+        <button id="hypotenuse-btn" class="button">Calculate Hypotenuse</button>
+        <div id="output"></div>
+    </div>
+
 
     <script src="/hypotenuse.js"></script>
 </body>
