--- a/istriangle.html
+++ b/istriangle.html
@@ -6,25 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>Document</title>
+    <title>Is Triangle</title>
 </head>
 
 <body>
-    <h1>Is Triangles</h1>
-    <label for="angle1">angle1</label>
-    <input type="number" class="input-angle"></input>
-    <label for="angle3">angle2</label>
-    <input type="number" class="input-angle"></input>
-    <label for="angle3">angle3</label>
-    <input type="number" class="input-angle"></input>
-    <button id="is-triangle-btn">Is Triangle</button>
-    <div id="output"></div>
+    <nav class="container-nav">
+        <a href="/istriangle.html" class="nav-link link-active">isTriangle</a>
+        <a href="/hypotenuse .html" class="nav-link">Hypotenuse</a>
+        <a href="/area.html" class="nav-link">Area</a>
+        <a href="/quiz.html" class="nav-link">Quiz</a>
+    </nav>
 
 
-
-
-
-
+    <div class="container">
+        <h1 class="heading">Is Triangles</h1>
+        <label for="angle1">angle1 :</label>
+        <input type="number" class="input-angle"></input>
+        <label for="angle3">angle2 :</label>
+        <input type="number" class="input-angle"></input>
+        <label for="angle3">angle3 :</label>
+        <input type="number" class="input-angle"></input>
+        <button id="is-triangle-btn" class="button">Is Triangle</button>
+        <div id="output"></div>
+    </div>
 
     <script src="triangle.js"></script>
 
