--- a/quiz.html
+++ b/quiz.html
@@ -5,29 +5,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Triangle Quiz</title>
 </head>
 
 <body>
-    <h1>Triangle Quiz</h1>
-    <form class="quiz-form">
-        <div class="question-container">
-            <p>What is the third angle for the triangle where angle1 = 45° and angle2 = 45°?</p>
-            <label><input type="radio" name="question1" value="45°"/>45°</label>
-            <label><input type="radio" name="question1" value="60°"/>60°</label>
-            <label><input type="radio" name="question1" value="90°"/>90°</label>
 
-        </div>
+    <nav class="container-nav">
+        <a href="/istriangle.html" class="nav-link ">isTriangle</a>
+        <a href="/hypotenuse .html" class="nav-link">Hypotenuse</a>
+        <a href="/area.html" class="nav-link">Area</a>
+        <a href="/quiz.html" class="nav-link link-active">Quiz</a>
+    </nav>
 
-        <div class="question-container">
-            <p>If a triangle has an angle of 90 degrees, what is it called?</p>
-            <label><input type="radio" name="question2" value="obtuse"/>obtuse</label>
-            <label><input type="radio" name="question2" value="acute"/> acute </label>
-            <label><input type="radio" name="question2" value="right angled"/>right angled</label>
-        </div>
-    </form>
-    <button id="submit-answer-btn">Submit Answer</button>
-    <div id="output"></div>
+
+    <div class="container">
+        <h1 class="heading">Triangle Quiz</h1>
+        <form class="quiz-form">
+            <div class="quiz-container">
+                <p>What is the third angle for the triangle where angle1 = 45° and angle2 = 45°?</p>
+                <label><input type="radio" name="question1" value="45°" />45°</label>
+                <label><input type="radio" name="question1" value="60°" />60°</label>
+                <label><input type="radio" name="question1" value="90°" />90°</label>
+
+            </div>
+
+            <div class="quiz-container">
+                <p>If a triangle has an angle of 90 degrees, what is it called?</p>
+                <label><input type="radio" name="question2" value="obtuse" />obtuse</label>
+                <label><input type="radio" name="question2" value="acute" /> acute </label>
+                <label><input type="radio" name="question2" value="right angled" />right angled</label>
+            </div>
+        </form>
+        <button id="submit-answer-btn" class="button">Submit Answer</button>
+        <div id="output"></div>
+    </div>
+
+
 
     <script src="/quiz.js"></script>
 </body>
