update some changes

--- a/area.html
+++ b/area.html
@@ -25,7 +25,7 @@
         <label>Height:</label>
         <input type="number" class="input-angle" id="height"></input>
         <button id="area-btn" class="button">Calculate Area</button>
-        <div id="output"></div>
+        <div id="output-box"></div>
     </div>
 
 
