--- a/hypotenuse .html
+++ b/hypotenuse .html
@@ -25,7 +25,7 @@
         <label>Opposite side :</label>
         <input type="number" class="input-side"></input>
         <button id="hypotenuse-btn" class="button">Calculate Hypotenuse</button>
-        <div id="output"></div>
+        <div id="output-box"></div>
     </div>
 
 
