--- a/istriangle.html
+++ b/istriangle.html
@@ -22,12 +22,12 @@
         <h1 class="heading">Is Triangles</h1>
         <label for="angle1">angle1 :</label>
         <input type="number" class="input-angle"></input>
-        <label for="angle3">angle2 :</label>
+        <label for="angle2">angle2 :</label>
         <input type="number" class="input-angle"></input>
         <label for="angle3">angle3 :</label>
         <input type="number" class="input-angle"></input>
         <button id="is-triangle-btn" class="button">Is Triangle</button>
-        <div id="output"></div>
+        <div id="output-box"></div>
     </div>
 
     <script src="triangle.js"></script>
