--- a/quiz.html
+++ b/quiz.html
@@ -38,7 +38,7 @@
             </div>
         </form>
         <button id="submit-answer-btn" class="button">Submit Answer</button>
-        <div id="output"></div>
+        <div id="output-box"></div>>
     </div>
 
 
