Fixed content and file path for hypotenuse.html

--- a/quiz.html
+++ b/quiz.html
@@ -13,7 +13,7 @@
 
     <nav class="container-nav">
         <a href="/istriangle.html" class="nav-link ">isTriangle</a>
-        <a href="/hypotenuse .html" class="nav-link">Hypotenuse</a>
+        <a href="/hypotenuse.html" class="nav-link">Hypotenuse</a>
         <a href="/area.html" class="nav-link">Area</a>
         <a href="/quiz.html" class="nav-link link-active">Quiz</a>
     </nav>
@@ -38,7 +38,7 @@
             </div>
         </form>
         <button id="submit-answer-btn" class="button">Submit Answer</button>
-        <div id="output-box"></div>>
+        <div id="output-box"></div>
     </div>
 
 
