--- a/area.html
+++ b/area.html
@@ -11,12 +11,27 @@
 
 <body>
 
-    <nav class="container-nav">
-        <a href="/istriangle.html" class="nav-link ">isTriangle</a>
-        <a href="/hypotenuse.html" class="nav-link">Hypotenuse</a>
-        <a href="/area.html" class="nav-link link-active">Area</a>
-        <a href="/quiz.html" class="nav-link">Quiz</a>
+    <nav class="navigation">
+        <div class="nav-brand">Fun with Triangles </div>
+
+        <ul class="non-bullet nav-pills">
+
+            <li class="list-item-inline">
+                <a href="/istriangle.html" class="nav-link">isTriangle</a>
+            </li>
+            <li class="list-item-inline">
+                <a href="/hypotenuse.html" class="nav-link">Hypotenuse</a>
+            </li>
+            <li class="list-item-inline">
+                <a href="/area.html" class="nav-link link-active">Area</a>
+            </li>
+            <li class="list-item-inline">
+                <a href="/quiz.html" class="nav-link">Quiz</a>
+
+            </li>
+        </ul>
     </nav>
+
 
     <div class="container">
         <h1 class="heading">Calculate Area</h1>
