--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -10,12 +10,27 @@
 </head>
 
 <body>
-    <nav class="container-nav">
-        <a href="/istriangle.html" class="nav-link ">isTriangle</a>
-        <a href="/hypotenuse.html" class="nav-link link-active">Hypotenuse</a>
-        <a href="/area.html" class="nav-link">Area</a>
-        <a href="/quiz.html" class="nav-link">Quiz</a>
+    <nav class="navigation">
+        <div class="nav-brand">Fun with Triangles </div>
+
+        <ul class="non-bullet nav-pills">
+
+            <li class="list-item-inline">
+                <a href="/istriangle.html" class="nav-link">isTriangle</a>
+            </li>
+            <li class="list-item-inline">
+                <a href="/hypotenuse.html" class="nav-link link-active">Hypotenuse</a>
+            </li>
+            <li class="list-item-inline">
+                <a href="/area.html" class="nav-link">Area</a>
+            </li>
+            <li class="list-item-inline">
+                <a href="/quiz.html" class="nav-link">Quiz</a>
+
+            </li>
+        </ul>
     </nav>
+
 
 
     <div class="container">
