--- a/index.html
+++ b/index.html
@@ -10,11 +10,26 @@
 </head>
 
 <body>
-    <nav class="container-nav">
-        <a href="/istriangle.html" class="nav-link link-active">isTriangle</a>
-        <a href="/hypotenuse.html" class="nav-link">Hypotenuse</a>
-        <a href="/area.html" class="nav-link">Area</a>
-        <a href="/quiz.html" class="nav-link">Quiz</a>
+
+    <nav class="navigation">
+        <div class="nav-brand">Fun with Triangles </div>
+
+        <ul class="non-bullet nav-pills">
+
+            <li class="list-item-inline">
+                <a href="/istriangle.html" class="nav-link link-active">isTriangle</a>
+            </li>
+            <li class="list-item-inline">
+                <a href="/hypotenuse.html" class="nav-link">Hypotenuse</a>
+            </li>
+            <li class="list-item-inline">
+                <a href="/area.html" class="nav-link">Area</a>
+            </li>
+            <li class="list-item-inline">
+                <a href="/quiz.html" class="nav-link">Quiz</a>
+
+            </li>
+        </ul>
     </nav>
 
 
