--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul class="non-bullet nav-pills">
 
             <li class="list-item-inline">
-                <a href="/istriangle.html" class="nav-link link-active">isTriangle</a>
+                <a href="/index.html" class="nav-link link-active">isTriangle</a>
             </li>
             <li class="list-item-inline">
                 <a href="/hypotenuse.html" class="nav-link">Hypotenuse</a>
