updated button and nav bar

--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -16,7 +16,7 @@
         <ul class="non-bullet nav-pills">
 
             <li class="list-item-inline">
-                <a href="/index.html" class="nav-link">isTriangle</a>
+                <a href="/index.html" class="nav-link">IsTriangle</a>
             </li>
             <li class="list-item-inline">
                 <a href="/hypotenuse.html" class="nav-link link-active">Hypotenuse</a>
